# github-mcp-server

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT-SUMMARY.md  README.md  install.sh
config/: server.toml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  dynamic.yml  traefik.yml
docker/monitoring/: alert_rules.yml  loki.yml  prometheus.yml
docker/monitoring/grafana/dashboards/: github-api-metrics.json  github-mcp-overview.json  system-resources.json
docker/monitoring/grafana/datasources/: prometheus.yml
docker/monitoring/grafana/provisioning/: dashboards.yml
docker/nginx/: nginx.conf
docker/scripts/: setup-secrets.sh
docker/traefik/: traefik.yml
docs/: AWS-ROUTE53-DEPLOYMENT.md  GITHUB-APP-SETUP-GUIDE.md  GRAFANA-DASHBOARDS.md  INSTALLATION-PREREQUISITES.md  NETWORK-ARCHITECTURE.md  SECURITY-SUMMARY.md  WORKFLOW_DIAGRAM.md
migrations/: 001_initial.sql
src/: config.rs  error.rs  main.rs  metrics.rs
src/auth/: mod.rs
src/github/: api.rs  mod.rs  workflows.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs
src/security/: mod.rs
web/: index.html
web/css/: style.css
web/js/: app.js
