[package]
name = "github-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Alistair <alistair@example.com>"]
description = "Secure GitHub MCP server with workflow automation"
license = "MIT"
repository = "https://github.com/alistair/github-mcp-server"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Serialization and HTTP client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database and migrations
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Authentication and security
jsonwebtoken = "9.0"
oauth2 = "4.4"
argon2 = "0.5"
rand = "0.8"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting and security
governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true